# UltimaEngine

./: .gitignore  CMakeLists.txt
UltimaCore/: CMakeLists.txt  main.c
UltimaTempTest/: CMakeLists.txt  tempy
cmake/: global.cmake
